--- a/src/UI/Components/Inventory/Inventory.css
+++ b/src/UI/Components/Inventory/Inventory.css
@@ -1,5 +1,5 @@
 #Inventory { position:absolute; top:100px; left:100px; font-size:12px; }
-#Inventory table { border-spacing:0px; }
+#Inventory table { border-spacing:0px; display:inline-block; }
 
 #Inventory .titlebar { width:100%; height:17px; background-color:white; background-repeat:repeat-x; border-radius:3px 3px 0px 0px; }
 #Inventory .titlebar .base { width:11px; height:11px; border:none; background-color:transparent; background-repeat:no-repeat; }
